# Big-Wealth-AI-Trade-Signals

./: .env.example  .gitignore  =0.30.0  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RUNBOOK.md  full_auto_workflow.md  pyproject.toml  requirements.txt
config/: settings.yaml  watchlist_crypto.yaml  watchlist_stocks.yaml
infra/: cloud_scheduler_jobs.yaml  firestore.indexes.json
scripts/: run_scan.py  test_fetch.py  test_paper_trade.py  test_telegram.py
src/agent/: analyzer.py  models.py  scanner.py  tp_advisor.py
src/cloud/: bot_server.py  claude_cli.py  firestore.py  main.py  secrets.py
src/data/: crypto.py  us_stocks.py
src/indicators/: technical.py
src/notifications/: formatter.py  telegram.py  telegram_bot.py
src/trading/: paper_trade.py
tests/: test_analyzer.py  test_data.py  test_formatter.py  test_indicators.py  test_paper_trade.py  test_scanner.py  test_tp_advisor.py
