[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "big-wealth"
version = "0.1.0"
description = "AI trading agent for US stocks and crypto"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "ccxt>=4.3.0",
    "ta>=0.11.0",
    "pandas>=2.2.0",
    "python-telegram-bot>=21.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-secret-manager>=2.20.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
